ros_ws/log/build_2025-07-04_09-05-32/dynamic_obstacle_detector/stderr.log
  File "/root/ros_workspace/install/dynamic_obstacle_detector/lib/python3.12/site-packages/dynamic_obstacle_detector/obstacle_detector_node.py", line 62
    K = K_T.T        self.X = self.X + K @ y
                     ^^^^
SyntaxError: invalid syntax

